Correct text colors for night theme

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -90,7 +90,7 @@
                 android:layout_marginTop="@dimen/_18sdp"
                 android:fontFamily="@font/myfont"
                 android:text="over popular items"
-                android:textColor="@color/black"
+                android:textColor="@color/white"
                 android:textSize="@dimen/_17ssp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="@id/tv_would_like_to_eat"
@@ -112,7 +112,7 @@
                 android:layout_marginTop="@dimen/_10sdp"
                 android:fontFamily="@font/myfont"
                 android:text="category"
-                android:textColor="@color/black"
+                android:textColor="@color/white"
                 android:textSize="@dimen/_17ssp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="@id/rec_view_meals_popular"
