--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -89,8 +89,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_18sdp"
                 android:fontFamily="@font/myfont"
-                android:text="over popular items"
-                android:textColor="@color/white"
+                android:text="Over popular items"
+                android:textColor="@color/black"
                 android:textSize="@dimen/_17ssp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="@id/tv_would_like_to_eat"
@@ -111,8 +111,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_10sdp"
                 android:fontFamily="@font/myfont"
-                android:text="category"
-                android:textColor="@color/white"
+                android:text="Categories"
+                android:textColor="@color/black"
                 android:textSize="@dimen/_17ssp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="@id/rec_view_meals_popular"
